2010-09-15  Roland Levillain  <roland@lrde.epita.fr>

	Add tracing mechanism to breadth-first thinning.

	* mln/topo/skeleton/breadth_first_thinning.hh: Here.
	Typos and aesthetic changes.

2010-09-15  Roland Levillain  <roland@lrde.epita.fr>

	Small fix in breadth-first thinning.

	* mln/topo/skeleton/breadth_first_thinning.hh: Do not try to
	detach an aldready processed site.

2010-09-09  Roland Levillain  <roland@lrde.epita.fr>

	Make the 5th argument of breadth_first_thinning truly optional.

	* mln/topo/skeleton/breadth_first_thinning.hh
	(mln::topo::skeleton::breadth_first_thinning):
	Disable the default value of the 5th argument, which cannot be
	used in practice, since it depends on the parameter H.
	Add a 4-argument overloading to make the `constraint' argument
	optional.

2010-09-01  Roland Levillain  <roland@lrde.epita.fr>

	Add more documentation on the detach procedure.

	* mln/make/detachment.hh: Here.
	Typo.
	* mln/topo/detach.hh: Typo.

2010-07-28  Roland Levillain  <roland@lrde.epita.fr>

	Regen Milena's Makefile helpers.

	* headers.mk, tests/unit_test/unit-tests.mk: Here.

2010-07-28  Roland Levillain  <roland@lrde.epita.fr>

	Add a VTK output for images of unsigned integers.

	* mln/io/vtk/save.hh
	(io::vtk::save(const unsigned_2complex_image3df&, const std::string&)):
	New function.
	(io::vtk::internal::unsigned_vtk_saver): New structure.
	* tests/io/vtk/save.cc: Add a tests case for images of unsigneds.
	* tests/io/vtk/Makefile.am (MOSTLYCLEANFILES):
	Add save-tetrahedron-unsigned.vtk.

2010-07-28  Roland Levillain  <roland@lrde.epita.fr>

	* mln/io/vtk/save.hh: Fix documentation.

2010-07-27  Roland Levillain  <roland@lrde.epita.fr>

	* mln/io/vtk/all.hh: New.

2010-06-24  Roland Levillain  <roland@lrde.epita.fr>

	Add a specific (temporary) VTK output routine for binary mesh images.

	* apps/mesh-segm-skel/save_bin_alt.hh
	(mln::io::vtk::save_bin_alt): New function.

2010-06-24  Roland Levillain  <roland@lrde.epita.fr>
